# fume_hood

./: .gitignore  .prettierrc.yml  README.md  fume-hood.service  install.sh  pyproject.toml
doc/: fume-hood.fzz
fume_hood/: __init__.py
